Additional checks for null and empty values